# experimental-cellular-automata

./: CMakeLists.txt  cellular_automata_interface.h
cellular_automata_impl/: CMakeLists.txt  cellular_automata_impl.cpp  cellular_automata_impl.h
random/: CMakeLists.txt  main.cpp
